Dibuat menggunakan Colab

--- a/test_transfer_learning1.ipynb
+++ b/test_transfer_learning1.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "history_visible": true
+      "history_visible": true,
+      "mount_file_id": "1Sy0vthQgJvCeKO0AgPDvue2C-yRPknQA",
+      "authorship_tag": "ABX9TyPACGDdQCJE5C45sGnp6Sxx",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/droxide16/classificaton/blob/main/test_transfer_learning1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -1664,6 +1677,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "mI9IakTpGWDc"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
